# pico-scd41-co2-meter

./: CMakeLists.txt  build.bat  flasher.sh  main.c
mates/: controller.h
mates/includes/: commands.md  errors.md  widgets.md
